# AESimFM_win

./: .gitignore  AGENTS.md  AutoRemesh_Design.md  CMakeLists.txt  README.md  WORKDOC_MIGRATION.md  ai_environment_lookup_guide.md  all_core_plan.md  build.ps1  cmake_build.sh
docs/: AutoRemesh_Design.md  ExistingRemesh_Summary.md  WORKDOC_MIGRATION.md  architecture.md  h5_format_spec.md  inp_keywords_reference.md  phase3_hdf5_verification.md  process_chain_guide.md  project_structure.md  solver_api.md  windows_solver_capability_baseline.md  windows_solver_completion_gap_plan.md
docs/skill_migrated_references/: aesimfm-win-handoff.md  architecture.md  windows-remesh-architecture.md  windows-solver-interface-contract.md  windows-solver-performance-plan.md
scripts/: check_dll_deps.ps1  gen_plate_inp.py  install_solver.ps1  package_solver.ps1  plot_h5.py  solver.ps1
src/remesh/: frd_reader.py
src/solver/: CMakeLists.txt  calinput.f  creep_softening_model.f  creepsoftenings.f  damages.f  drx_hip_weicme.f  dynamicrecrystallizations.f  frd.c  getSystemCPUs.c  hdf5_writer.c  hdf5_writer.h  ifport.f90  inputerror.f  materialdata_me.f  metal_powder.f  metalpowders.f  output_mtx.c  phaseother.f  phasetransition.f  phasetransition1.f  plasticwork.c  ratedependentplastics.f  rdplas.f  readphaseinf.f  solver.c  srx_mrx_k90.f  stof.c  stoi.c  strcmp2.c  strcpy1.c  transformation.f  win_compat.c
src/solver/external_headers/: win_compat.h
test/: run_tests.ps1  test_matrix.csv
test/inputs/: cax4_elastic.inp  cax4_elastic.sta  creep_single_element_norton.inp  creep_single_element_user.inp  disk.cvg  disk.inp  disk.sta  mrx_minimal.inp  phase_ttt_minimal.inp  plate_tension.inp  pnewdt.txt  powder_creep_minimal.inp  spooles.out  srx_minimal.inp  stress_relaxation_hold.inp  unit_c3d10.inp  unit_c3d15.inp  unit_c3d20.inp  unit_c3d20r.inp  unit_c3d4.inp  unit_c3d6.inp  unit_c3d8.inp  unit_c3d8r.inp  unit_cax3.inp  unit_cax4r.inp  unit_cax6.inp  unit_cax8.inp  unit_cax8r.inp
